--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: order
-          image: admin26.azurecr.io/order:latest
+          image: admin26reg.azurecr.io/order:latest
           ports:
             - containerPort: 8080
           readinessProbe:
